Cherry-pick r283014. rdar://problem/83954982

[WebGL2, Safari 15 - iOS15] Problems with drawElements in some conditions
    https://bugs.webkit.org/show_bug.cgi?id=230107

    Index buffer rewrite was dispatching too many threads.
    Reviewed by Dean Jackson.

    * src/libANGLE/renderer/metal/ProvokingVertexHelper.mm:
    (rx::ProvokingVertexHelper::preconditionIndexBuffer):

    Canonical link: https://commits.webkit.org/242079@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283014 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/240672.182@safari-612-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-612-branch@283784 268f45cc-cd09-0410-ab3c-d52691b4dbfc